Handle gameplay and render it on the screen

--- a/index.html
+++ b/index.html
@@ -16,16 +16,19 @@
         <button>Save</button>
     </form>
 
-    <div id="board">
-        <div id="cell-0" class="cell"></div>
-        <div id="cell-1" class="cell"></div>
-        <div id="cell-2" class="cell"></div>
-        <div id="cell-3" class="cell"></div>
-        <div id="cell-4" class="cell"></div>
-        <div id="cell-5" class="cell"></div>
-        <div id="cell-6" class="cell"></div>
-        <div id="cell-7" class="cell"></div>
-        <div id="cell-8" class="cell"></div>
+    <div class="board-container">
+        <h2 id="game-state"></h2>
+        <div id="board">
+            <div id="cell-0" data-cell="0" class="cell"></div>
+            <div id="cell-1" data-cell="1" class="cell"></div>
+            <div id="cell-2" data-cell="2" class="cell"></div>
+            <div id="cell-3" data-cell="3" class="cell"></div>
+            <div id="cell-4" data-cell="4" class="cell"></div>
+            <div id="cell-5" data-cell="5" class="cell"></div>
+            <div id="cell-6" data-cell="6" class="cell"></div>
+            <div id="cell-7" data-cell="7" class="cell"></div>
+            <div id="cell-8" data-cell="8" class="cell"></div>
+        </div>
     </div>
 
     <script src="assets/js/main.js"></script>
