add playagain button and function listener

--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
             <div id="cell-7" data-cell="7" class="cell"></div>
             <div id="cell-8" data-cell="8" class="cell"></div>
         </div>
+        <div>
+            <button id="play-again">Play again?</button>
+        </div>
     </div>
 
     <script src="assets/js/main.js"></script>
